--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,8 +15,9 @@ dependencies:
 
   cupertino_icons: ^1.0.2
   provider: ^5.0.0
-  firebase_core: ^0.4.0+9
-  cloud_firestore: ^0.12.9+5
+  firebase_core: ^1.2.0
+  cloud_firestore: ^2.2.0
+  firebase_auth: ^1.2.0
 
 
 dev_dependencies:
